Avoid ellipsis / nowrap on non-fixed tables

--- a/src/goupile/client/ui.css
+++ b/src/goupile/client/ui.css
@@ -269,10 +269,12 @@ html.small .ui_toolbar button.icon {
 .ui_table th, .ui_table td {
     padding: 3px 6px;
     text-align: center;
+    border: 1px solid #dfdfdf;
+}
+.ui_table.fixed td, .ui_table.fixed th {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    border: 1px solid #dfdfdf;
 }
 .ui_table td { border: 1px solid #dfdfdf; }
 .ui_table a { text-decoration: none; }
